@@ -2111,9 +2111,9 @@ struct permonst _mons2[] = {
     MON("Nazgul", S_WRAITH,
 	LVL(13, 12, 0, 25, -17), (G_GENO|G_NOCORPSE|1),
 	A(ATTK(AT_WEAP, AD_DRLI, 1, 4), ATTK(AT_BREA, AD_SLEE, 2,25),
-	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
+	  ATTK(AT_SCRE, AD_STUN, 2, 8), NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(WT_HUMAN, 0, 0, MS_SPELL, MZ_HUMAN),
-	MR_COLD|MR_SLEEP|MR_POISON, 0, M1_BREATHLESS|M1_HUMANOID,
+	MR_COLD|MR_SLEEP|MR_POISON, 0, M1_BREATHLESS|M1_HUMANOID|M1_SEE_INVIS,
 	M2_NOPOLY|M2_UNDEAD|M2_STALK|M2_STRONG|M2_HOSTILE|M2_MALE|M2_COLLECT,
 	0, HI_LORD),
 /*
